// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Render must match blue() 1`] = `
<div>
  <button
    class="btn btn-blue"
    type="button"
  >
    Blue button
  </button>
</div>
`;

exports[`<Button /> Render must match blueIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-blue"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
    Blue icon button
  </button>
</div>
`;

exports[`<Button /> Render must match blueIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-blue"
    type="button"
  >
    Blue icon button
    <svg
      aria-hidden="true"
      class="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> Render must match blueInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-blue button-inactive"
    disabled=""
    type="button"
  >
    Blue inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match blueLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-blue"
    type="button"
  >
    Blue large button
  </button>
</div>
`;

exports[`<Button /> Render must match blueSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-blue"
    type="button"
  >
    Blue small button
  </button>
</div>
`;

exports[`<Button /> Render must match danger() 1`] = `
<div>
  <button
    class="btn btn-danger"
    type="button"
  >
    Danger button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-danger"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
    Danger icon button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-danger"
    type="button"
  >
    Danger icon button
    <svg
      aria-hidden="true"
      class="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> Render must match dangerInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-danger button-inactive"
    disabled=""
    type="button"
  >
    Danger inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-danger"
    type="button"
  >
    Danger large button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-danger"
    type="button"
  >
    Danger small button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultIconLeftAligned() 1`] = `
<div>
  <button
    class="btn"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
    Default icon button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultIconRightAligned() 1`] = `
<div>
  <button
    class="btn"
    type="button"
  >
    Default icon button
    <svg
      aria-hidden="true"
      class="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> Render must match defaultInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn button-inactive"
    disabled=""
    type="button"
  >
    Default inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultLarge() 1`] = `
<div>
  <button
    class="btn btn-large"
    type="button"
  >
    Default large button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultLink() 1`] = `
<div>
  <a
    class="btn"
    href="#url"
    role="button"
  >
    Default link button
  </a>
</div>
`;

exports[`<Button /> Render must match defaultNormal() 1`] = `
<div>
  <button
    class="btn"
    type="button"
  >
    Default normal button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultSmall() 1`] = `
<div>
  <button
    class="btn btn-sm"
    type="button"
  >
    Default small button
  </button>
</div>
`;

exports[`<Button /> Render must match orange() 1`] = `
<div>
  <button
    class="btn btn-orange"
    type="button"
  >
    Orange button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-orange"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
    Orange icon button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-orange"
    type="button"
  >
    Orange icon button
    <svg
      aria-hidden="true"
      class="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> Render must match orangeInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-orange button-inactive"
    disabled=""
    type="button"
  >
    Orange inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-orange"
    type="button"
  >
    Orange large button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-orange"
    type="button"
  >
    Orange small button
  </button>
</div>
`;

exports[`<Button /> Render must match outline() 1`] = `
<div>
  <button
    class="btn btn-outline"
    type="button"
  >
    Outline button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-outline"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
    Outline icon button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-outline"
    type="button"
  >
    Outline icon button
    <svg
      aria-hidden="true"
      class="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> Render must match outlineInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-outline button-inactive"
    disabled=""
    type="button"
  >
    Outline inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-outline"
    type="button"
  >
    Outline large button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-outline"
    type="button"
  >
    Outline small button
  </button>
</div>
`;

exports[`<Button /> Render must match primary() 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Primary button
  </button>
</div>
`;

exports[`<Button /> Render must match primaryIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
    Primary icon button
  </button>
</div>
`;

exports[`<Button /> Render must match primaryIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Primary icon button
    <svg
      aria-hidden="true"
      class="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 1 1 0 1.5H8.5v4.25a.75.75 0 1 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> Render must match primaryInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-primary button-inactive"
    disabled=""
    type="button"
  >
    Primary inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match primaryLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-primary"
    type="button"
  >
    Primary large button
  </button>
</div>
`;

exports[`<Button /> Render must match primarySmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-primary"
    type="button"
  >
    Primary small button
  </button>
</div>
`;
